--- a/0c-ubuntu-git-bash/c1a-cpp-rust-wasi/ca2a-nodejs/Dockerfile
+++ b/0c-ubuntu-git-bash/c1a-cpp-rust-wasi/ca2a-nodejs/Dockerfile
@@ -1,9 +1,11 @@
 FROM jamesmart/c1a-cpp-rust-wasi:latest
 
-ENV PATH=/opt/node-v14.16.0-linux-x64/bin:$PATH
+ARG NODEVERSION="v16.17.0"
+
+ENV PATH=/opt/node-${NODEVERSION}-linux-x64/bin:$PATH
 
 WORKDIR /opt
-RUN curl -LO https://nodejs.org/dist/v14.16.0/node-v14.16.0-linux-x64.tar.xz \
-    && tar xf node-v14.16.0-linux-x64.tar.xz \
-    && rm node-v14.16.0-linux-x64.tar.xz \
+RUN curl -LO https://nodejs.org/dist/${NODEVERSION}/node-${NODEVERSION}-linux-x64.tar.xz \
+    && tar xf node-${NODEVERSION}-linux-x64.tar.xz \
+    && rm node-${NODEVERSION}-linux-x64.tar.xz \
     && npm i -g yarn
